<resources>
    <string name="app_name">Github-Trending</string>

    <string name="toolbar_title">Trending</string>
    <string name="sort_by_stars">Sort by stars</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="user_avatar">Github User Avatar</string>
    <string name="language_placeholder">Kotlin</string>
    <string name="star_placeholder">3</string>
    <string name="fork_placeholder">123</string>
    <string name="author_placeholder">nasreekar</string>
    <string name="name_placeholder">Github Trending repo</string>
    <string name="dp_empty_repo_list">No repos to display</string>
</resources>
