<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/dp_16">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:id="@+id/item_repo_user_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_author"
                style="@style/authorStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_6"
                android:gravity="center_vertical"
                android:hint="@string/author_placeholder" />

            <TextView
                android:id="@+id/item_name"
                style="@style/repoNameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:hint="@string/name_placeholder" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/item_extra_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container"
        android:layout_marginStart="@dimen/dp_48">

        <TextView
            android:id="@+id/item_description"
            style="@style/desriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8" />

        <LinearLayout
            android:id="@+id/item_language_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_description"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_language_image"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_dot" />

            <TextView
                android:id="@+id/item_language"
                style="@style/authorStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:hint="@string/language_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_star_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_description"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_toEndOf="@id/item_language_container"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_star_image"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_star" />

            <TextView
                android:id="@+id/item_star_count"
                style="@style/authorStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:hint="@string/star_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_fork_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_description"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_toEndOf="@id/item_star_container"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_fork_image"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_fork" />

            <TextView
                android:id="@+id/item_fork_count"
                style="@style/authorStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:hint="@string/fork_placeholder" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>